tests/reference/asr-intrinsics11-7200632.stderr
semantic error: Kind of all the arguments of Hypot must be the same
 --> tests/errors/intrinsics11.f90:4:14
  |
4 |     print *, hypot(x, y)
  |              ^^^^^^^^^^^ 
